OldArchive/9a11c0cdc3d2e712d2ed03a10e5c97e9-aac55670e5fff8ba8f1c0bddff3e4aec/output
+ clang -x c -std=c99 -W -Wall -pedantic main.cpp
main.cpp:3:1: error: 'main' must return 'int'
void main()
^~~~
int
main.cpp:6:5: error: function definition is not allowed here
    {
    ^
main.cpp:11:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
1 warning and 2 errors generated.
